--- a/index.html
+++ b/index.html
@@ -1,12 +1,94 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>image_to_hex</title>
+  <meta charset="UTF-8">
   <meta name="google-site-verification" content="0tBfaHkhkYpJxBVEgsku7RFdMl9nqP8mjtDl5C-oBRM" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Convert Images to hex code</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.6;
+      background: #fafafa;
+      color: #222;
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+    h2 {
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 5px;
+      color: #444;
+    }
+    code {
+      background: #eee;
+      padding: 2px 5px;
+      border-radius: 3px;
+    }
+    pre {
+      background: #f0f0f0;
+      padding: 10px;
+      border-radius: 5px;
+      overflow-x: auto;
+    }
+    ul {
+      list-style-type: "✅ ";
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to image_to_hex</h1>
-  <p>This is my GitHub Pages site for Google verification.</p>
+  <h1>image_to_hex</h1>
+
+  <p>
+    This project provides a set of Python tools to convert images into hexadecimal arrays 
+    for use with microcontrollers (e.g., ESP32/Arduino) — especially for E-Ink displays.
+  </p>
+
+  <h2>✨ Features</h2>
+  <h3>Image → Hex Conversion</h3>
+  <ul>
+    <li>1-bit monochrome</li>
+    <li>Grayscale (4-bit / multi-shade)</li>
+    <li>1-bit monochrome with dithering (to mimic grayscale)</li>
+  </ul>
+
+  <h3>Hex → Image Conversion</h3>
+  <p>Verify hex array validity by converting back into an image.</p>
+
+  <h3>Image → Bitmap (.bmp)</h3>
+  <p>Convert images into standard <code>.bmp</code> format for further processing.</p>
+
+  <h3>Centering Tool</h3>
+  <p>
+    Center a <code>.png</code> or image on a canvas. Fills borders with 5 shades 
+    (black, white, and 3 gray levels).
+  </p>
+
+  <h2>🚀 Usage</h2>
+  <p>Clone the repo:</p>
+  <pre><code>git clone https://github.com/mihirvr/image_to_hex.git</code></pre>
+
+  <p>Install dependencies:</p>
+  <pre><code>pip install -r requirements.txt</code></pre>
+
+  <p>Run a script:</p>
+  <pre><code>python hexgen_w_dithering.py</code></pre>
+
+  <p>Check outputs in respective folders.</p>
+
+  <h2>📌 Notes</h2>
+  <p>
+    Designed for E-Ink display testing (works with ESP32/Arduino projects). Supports 
+    monochrome + grayscale (with and without dithering).
+  </p>
+  <p>Easy preview to ensure the generated hex data is valid.</p>
+
+  <p style="text-align:center; margin-top:40px;">
+    🔗 <a href="https://github.com/mihirvr/image_to_hex" target="_blank">View on GitHub</a>
+  </p>
 </body>
 </html>
