Update header text for clarity

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </style>
 </head>
 <body>
-  <h1>image_to_hex</h1>
+  <h1>Convert Images to hex code</h1>
 
   <p>
     This project provides a set of Python tools to convert images into hexadecimal arrays 
