--- a/index.html
+++ b/index.html
@@ -4,44 +4,141 @@
   <meta charset="UTF-8">
   <meta name="google-site-verification" content="0tBfaHkhkYpJxBVEgsku7RFdMl9nqP8mjtDl5C-oBRM" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Convert Images to hex code</title>
+  <title>Convert Images to Hex Code</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.6;
-      background: #fafafa;
-      color: #222;
+    :root {
+      --bg-color: #fafafa;
+      --text-color: #222;
+      --heading-color: #333;
+      --link-color: #007bff;
+      --card-bg: #f0f0f0;
     }
+
+    [data-theme="dark"] {
+      --bg-color: #121212;
+      --text-color: #eaeaea;
+      --heading-color: #fff;
+      --link-color: #4da3ff;
+      --card-bg: #1e1e1e;
+    }
+
+    body {
+      font-family: "Segoe UI", Arial, sans-serif;
+      max-width: 850px;
+      margin: 50px auto;
+      padding: 0 25px;
+      line-height: 1.7;
+      background: var(--bg-color);
+      color: var(--text-color);
+      transition: background 0.3s ease, color 0.3s ease;
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 40px;
+    }
+
+    .github-link {
+      text-decoration: none;
+      color: var(--link-color);
+      font-weight: 600;
+      border: 1px solid var(--link-color);
+      padding: 6px 12px;
+      border-radius: 8px;
+      transition: all 0.3s;
+    }
+
+    .github-link:hover {
+      background: var(--link-color);
+      color: white;
+    }
+
+    .toggle-btn {
+      cursor: pointer;
+      border: none;
+      background: var(--card-bg);
+      color: var(--text-color);
+      padding: 8px 14px;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: all 0.3s;
+    }
+
+    .toggle-btn:hover {
+      background: var(--link-color);
+      color: white;
+    }
+
     h1 {
       text-align: center;
-      color: #333;
+      color: var(--heading-color);
+      font-size: 2.2em;
+      margin-top: 0;
     }
+
     h2 {
-      border-bottom: 2px solid #ddd;
+      border-bottom: 2px solid #6666;
       padding-bottom: 5px;
-      color: #444;
+      color: var(--heading-color);
+      margin-top: 40px;
     }
+
+    h3 {
+      color: var(--heading-color);
+      margin-top: 20px;
+    }
+
     code {
-      background: #eee;
-      padding: 2px 5px;
-      border-radius: 3px;
-    }
-    pre {
-      background: #f0f0f0;
-      padding: 10px;
+      background: var(--card-bg);
+      padding: 3px 6px;
       border-radius: 5px;
+      font-size: 0.95em;
+    }
+
+    pre {
+      background: var(--card-bg);
+      padding: 12px;
+      border-radius: 8px;
       overflow-x: auto;
     }
+
     ul {
       list-style-type: "✅ ";
+      margin-left: 20px;
+    }
+
+    a {
+      color: var(--link-color);
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 50px;
+      font-size: 0.9em;
+      color: #777;
+    }
+
+    footer a {
+      color: var(--link-color);
+      text-decoration: none;
     }
   </style>
 </head>
+
 <body>
-  <h1>Convert Images to hex code</h1>
+  <header>
+    <button class="toggle-btn" id="themeToggle">🌗 Toggle Mode</button>
+    <a href="https://github.com/mihirvr/image_to_hex" target="_blank" class="github-link">⭐ GitHub Repo</a>
+  </header>
+
+  <h1>Convert Images to Hex Code</h1>
 
   <p>
     This project provides a set of Python tools to convert images into hexadecimal arrays 
@@ -87,8 +184,26 @@
   </p>
   <p>Easy preview to ensure the generated hex data is valid.</p>
 
-  <p style="text-align:center; margin-top:40px;">
-    🔗 <a href="https://github.com/mihirvr/image_to_hex" target="_blank">View on GitHub</a>
-  </p>
+  <footer>
+    <p>
+      Made with ❤️ by <a href="https://github.com/mihirvr" target="_blank">Mihir Revaskar</a><br>
+      <a href="https://github.com/mihirvr/image_to_hex" target="_blank">View on GitHub</a>
+    </p>
+  </footer>
+
+  <script>
+    const toggleBtn = document.getElementById("themeToggle");
+    const body = document.body;
+
+    // Detect user’s system preference
+    if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      body.setAttribute("data-theme", "dark");
+    }
+
+    toggleBtn.addEventListener("click", () => {
+      const currentTheme = body.getAttribute("data-theme");
+      body.setAttribute("data-theme", currentTheme === "dark" ? "light" : "dark");
+    });
+  </script>
 </body>
 </html>
